[package]
name = "weather-source"
version = "0.1.0"
edition = "2021"
authors = ["achester88"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
chrono = "0.4.38"
indicatif = "0.17.8"